add OpenAPI TypeScript API to FE
